Fix Sidebar, Student Views

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -892,9 +892,10 @@ The "show" class is added to the accordion panel when the user clicks on one of 
 }
 
 .dashtitle{
-    background-color: #ffe8e8;
-    margin-bottom: 10px;
-    padding: 5px;
+    /* background-color: #ffe8e8; */
+    margin: 15px auto;
+		/* padding: 5px; */
+		color: #660000;
 }
 
 .dashboard{
@@ -1018,4 +1019,61 @@ The "show" class is added to the accordion panel when the user clicks on one of 
   background: rgba(0, 0, 0, 0.4);
   font-size: 30px;
 }
+
+.search
+{
+  border: 2px solid #800000;
+  overflow: auto;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  font-size: 14px;
+  width: 100%;
+}
+
+.search input[type="text"]
+{
+  border: 0px;
+  width: 90%;
+  padding: 10px 10px;
+}
+
+.search input[type="text"]:focus
+{
+  outline: 0;
+}
+
+.search input[type="submit"]
+{
+  border: 0px;
+  background: none;
+  background-color: #800000;
+  color: #fff;
+  float: right;
+  padding: 10px;
+  border-radius-top-right: 5px;
+  -moz-border-radius-top-right: 5px;
+  -webkit-border-radius-top-right: 5px;
+  border-radius-bottom-right: 5px;
+  -moz-border-radius-bottom-right: 5px;
+  -webkit-border-radius-bottom-right: 5px;
+				cursor:pointer;
+		width: 10%;
+}
+
+/* ===========================
+   ====== Medua Query for Search Box ====== 
+   =========================== */
+
+@media only screen and (min-width : 150px) and (max-width : 780px)
+{
+  {}
+  .search
+  {
+    width: 95%;
+    margin: 0 auto;
+  }
+
+}
+
 
